# ICat

./: .env  .env.example  .gitignore  ICat.code-workspace  README  bot.py  docker-compose.yml  pyproject.toml  whatsAppBot.py
ai-service/: Dockerfile
ai-service/app/: main.py  models.py
backend/: bot.py  bot_start.py  run.py  run_bot.py  serv.py  server_runner.py
backend/app/: bot_app.py  config.py  server.py
backend/app/services/: forwarder.py
front2/: .rooignore  index.html  package.json  tailwind.config.js
front2/src/: main.tsx
front2/src/app/: App.tsx  globals.css  index.css  test-globals.css
front2/src/components/: AIAssistiveDashboard.tsx  LightModernDashboard.tsx  TestGlobals.tsx
frontend/: package.json
frontend/src/app/: App.tsx  page.tsx
frontend/src/components/: AIAssistiveDashboard.tsx  DarkProDashboard.tsx
frontend/src/components/ui/: toggle-group.tsx  toggle.tsx
telegram-bot-service/: Dockerfile  pyproject.toml  readme  run.py
telegram-bot-service/app/: bot_app.py  config.py  models.py
telegram-bot-service/app/handlers/: start.py  test_model.py
telegram-bot-service/app/keyboards/: main_menu.py
telegram-bot-service/app/middlewares/: logging.py
telegram-bot-service/app/services/: forwarder.py  helpers.py  session.py
